--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AddToDoActivity">
-
-        </activity>
+        <activity android:name=".ui.AddToDoActivity"></activity>
+        <activity android:name=".ui.EditTodoActivity"></activity>
     </application>
 
 </manifest>
